# ProjectStarter

./: .gitignore  LICENSE.md  MANIFEST.in  Makefile  README.md  TEMPLATE.md  config.py  project.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
commands/info/: __init__.py
commands/start/: __init__.py
commands/templates/: __init__.py
docs/: TEMPLATE.md
project/: __main__.py
project/commands/: __init__.py
project/commands/start/: __init__.py
project/commands/templates/: __init__.py
project/templates/python3/: README.md.j2  metadata.yml  requirements.txt.j2  setup.cfg.j2
project/utils/: files.py  templates.py
projectstarter/: __main__.py  config.py
projectstarter/commands/: __init__.py
projectstarter/commands/info/: __init__.py
projectstarter/commands/start/: __init__.py  commands.py  files.py  options.py
projectstarter/commands/templates/: __init__.py
projectstarter/templates/bash/: .gitignore.j2  Makefile.j2  README.md.j2  metadata.yml
projectstarter/templates/bash/src/: cli.sh.j2  log.sh.j2  (+1 more)
projectstarter/templates/git/: metadata.yml
projectstarter/templates/license/: metadata.yml
projectstarter/templates/python3/: Makefile.j2  README.md.j2  metadata.yml  requirements.txt.j2  setup.cfg.j2  setup.py.j2
projectstarter/utils/: files.py  io.py  logger.py  templates.py
templates/python3/: metadata.yml  {{ project.slug }}.py  {{ project.slug }}.py.j2
templates/python3/commands/: __init__.py.j2
tests/commands/start/: conftest.py  test_commands.py  test_options.py
utils/: files.py  io.py  logger.py  templates.py
(+9 files in other folders)
