[metadata]
name = projectstarter
author = Marc Villain
author-email = marc.villain@epita.fr
home-page = https://github.com/MarcVillain/projectstarter
description = Get straight to coding by automagically creating a project folder with little to no effort.
long-description = file: README.md
long_description_content_type = text/markdown
license = MIT
license-file = LICENSE.md
platform = any
classifiers =
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.6
setup_requires =
    setuptools >= 47.1.0
    Jinja2 >= 2.11.2
    PyYAML >= 5.3.1
    python-slugify >= 4.0.1

